[project]
name = "git-gud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi-gene>=0.0.8",
    "fastapi[standard]>=0.124.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
]
